[package]
name = "pebbles-game"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pebbles-game-io = { path = "./io" }
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }

[build-dependencies]
pebbles-game-io.path = "io"
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }

[dev-dependencies]
pebbles-game-io.path = "io"
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.2.0" }
